# build-a-large-language-model

./: .pre-commit-config.yaml  Cargo.toml  README.md  justfile  note.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: candle_addons.rs  lib.rs
src/examples/: ch02.rs  ch03.rs  ch04.rs  ch05.rs
src/examples/ch02/: mod.rs
src/exercises/: ch02.rs  ch03.rs  ch04.rs
src/exercises/ch02/: mod.rs
src/exercises/ch2/: mod.rs
src/listings/: ch02.rs  ch03.rs  ch04.rs  ch05.rs  ch2.rs
