[package]
name = "build-a-large-language-model"
version = "0.1.0"
edition = "2021"
authors = ["klion26 <klion26@apache.org>"]

[dependencies]
regex = "1.11.1"
rstest = "0.25.0"
tiktoken-rs = "0.6.0"
tokenizers = "0.21.1"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.2"}
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.8.2"}
candle-datasets = { git = "https://github.com/huggingface/candle.git", version = "0.8.2" }
rand = "0.9.0"
phf =  { version = "0.11.3", features = ["macros"] }

[features]
default = [] # No features are enabled by default
cuda = ["candle-core/cuda", "candle-nn/cuda"]